fixed weird image glitch, removed redundant whitespace

--- a/static-files/reservation.css
+++ b/static-files/reservation.css
@@ -2,7 +2,7 @@
     position: relative;
 }
 
-.res-hero{
+#res-hero{
     object-fit: cover;
 }
 
